citizen/citizen-deployment.yaml
# citizen-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citizen-deployment
  labels:
    app: citizen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: citizen
  template:
    metadata:
      labels:
        app: citizen
    spec:
      containers:
      - name: citizen-container
        image: raoufrazi/citizen-service:v1
        ports:
        - containerPort: 8081
